src/objects/Customer_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Sales_Proposal_Timeliness__c</fullName>
        <label>Sales Proposal Timeliness</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Second_Send_Day__c</fullName>
        <formula>CASE(MOD( Survey_Date_Sent__c - DATE(1900, 1, 6), 7), 0, DATETIMEVALUE(TEXT( Survey_Date_Sent__c+7) + &apos; 11:00:00&apos;), 1, DATETIMEVALUE(TEXT( Survey_Date_Sent__c+6) + &apos; 11:00:00&apos;), 2,DATETIMEVALUE(TEXT( Survey_Date_Sent__c +7) + &apos; 11:00:00&apos;), 3, DATETIMEVALUE(TEXT( Survey_Date_Sent__c+6) + &apos; 11:00:00&apos;), 4, DATETIMEVALUE(TEXT( Survey_Date_Sent__c+7) + &apos; 20:00:00&apos;), 5, DATETIMEVALUE(TEXT( Survey_Date_Sent__c+6) + &apos; 20:00:00&apos;), 6,DATETIMEVALUE(TEXT( Survey_Date_Sent__c+8) + &apos; 11:00:00&apos;),DATETIMEVALUE(TEXT( Survey_Date_Sent__c) + &apos; 11:00:00&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Second Send Day</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Solar_System_Appearance__c</fullName>
        <label>Solar System Appearance</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Solar_System_Design__c</fullName>
        <label>Solar System Design</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Completed_By__c</fullName>
        <label>Survey Completed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Survey Completed ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_Completed_by_Email__c</fullName>
        <label>Survey Completed by Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Survey_Date_Completed__c</fullName>
        <label>Survey Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Date_Sent__c</fullName>
        <label>Survey Date Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Re_Sent_Date__c</fullName>
        <label>Survey Re-Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Response_Number__c</fullName>
        <description>Reference to original survey database.</description>
        <label>Survey Response Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Sent_To_Email__c</fullName>
        <label>Survey Sent To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Survey_Sent_To__c</fullName>
        <label>Survey Sent To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_URL__c</fullName>
        <label>Survey URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Send_Day__c</fullName>
        <formula>CASE(MOD( Survey_Date_Sent__c - DATE(1900, 1, 6), 7), 0, DATETIMEVALUE(TEXT( Survey_Date_Sent__c+12) + &apos; 20:00:00&apos;), 1, DATETIMEVALUE(TEXT( Survey_Date_Sent__c+11) + &apos; 20:00:00&apos;), 2,DATETIMEVALUE(TEXT( Survey_Date_Sent__c +12) + &apos; 11:00:00&apos;), 3, DATETIMEVALUE(TEXT( Survey_Date_Sent__c+11) + &apos; 11:00:00&apos;), 4, DATETIMEVALUE(TEXT( Survey_Date_Sent__c+12) + &apos; 11:00:00&apos;), 5, DATETIMEVALUE(TEXT( Survey_Date_Sent__c+11) + &apos; 11:00:00&apos;), 6,DATETIMEVALUE(TEXT( Survey_Date_Sent__c+12) + &apos; 20:00:00&apos;),DATETIMEVALUE(TEXT( Survey_Date_Sent__c) + &apos; 11:00:00&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Third Send Day</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Times_Reminder_Sent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Times Reminder Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Customer Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PM_Project__c</columns>
        <columns>Contact__c</columns>
        <columns>Survey_Sent_To__c</columns>
        <columns>Survey_Date_Sent__c</columns>
        <columns>Survey_Sent_To_Email__c</columns>
        <columns>Survey_Completed__c</columns>
        <columns>Survey_Completed_By__c</columns>
        <columns>Survey_Date_Completed__c</columns>
        <columns>Initial_Send_Day__c</columns>
        <columns>Second_Send_Day__c</columns>
        <columns>Third_Send_Day__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>Customer Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>